--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "4.1.3",
+    "bootstrap-daterangepicker": "^3.0.3",
     "connected-react-router": "^4.4.1",
     "history": "^4.7.2",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
