--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "url-loader": "^1.1.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "3.1.8",
+
     "webpack-merge": "^4.1.4"
   },
   "scripts": {
