--- a/package.json
+++ b/package.json
@@ -5,55 +5,55 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "@githubprimer/octicons-react": "^8.1.0",
+    "@githubprimer/octicons-react": "8.1.0",
     "bootstrap": "4.1.3",
-    "bootstrap-daterangepicker": "^3.0.3",
-    "connected-react-router": "^4.5.0",
-    "history": "^4.7.2",
-    "jquery": "^3.3.1",
-    "moment": "^2.22.2",
-    "react": "^16.5.2",
-    "react-bootstrap-daterangepicker": "^4.1.0",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "reactstrap": "^6.4.0",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0"
+    "bootstrap-daterangepicker": "3.0.3",
+    "connected-react-router": "4.5.0",
+    "history": "4.7.2",
+    "jquery": "3.3.1",
+    "moment": "2.22.2",
+    "react": "16.5.2",
+    "react-bootstrap-daterangepicker": "4.1.0",
+    "react-dom": "16.5.2",
+    "react-redux": "5.0.7",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "reactstrap": "6.4.0",
+    "redux": "4.0.0",
+    "redux-saga": "0.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.3",
-    "browser-sync": "^2.24.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.3.1",
-    "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "^4.9.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "prettier": "^1.14.3",
-    "prettier-eslint": "^8.8.2",
-    "prop-types": "^15.6.2",
-    "react-hot-loader": "^4.3.11",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
+    "@babel/core": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-loader": "8.0.3",
+    "browser-sync": "2.24.7",
+    "browser-sync-webpack-plugin": "2.2.2",
+    "clean-webpack-plugin": "0.1.19",
+    "cross-env": "5.2.0",
+    "css-loader": "1.0.0",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "file-loader": "2.0.0",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "4.3.1",
+    "mini-css-extract-plugin": "0.4.3",
+    "node-sass": "4.9.3",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "prettier": "1.14.3",
+    "prettier-eslint": "8.8.2",
+    "prop-types": "15.6.2",
+    "react-hot-loader": "4.3.11",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.0",
+    "url-loader": "1.1.1",
+    "webpack": "4.20.2",
+    "webpack-cli": "3.1.1",
     "webpack-dev-server": "3.1.8",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "4.1.4"
   },
   "scripts": {
     "start": "webpack-dev-server --progress --colors --config ./wp_config/webpack.dev.js",
