Improve Webpack config

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "webpack-merge": "4.1.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --progress --colors --config ./wp_config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./wp_config/webpack.prod.js"
+    "start": "webpack-dev-server --progress --colors --config ./wp_config/dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./wp_config/prod.js"
   }
 }
