--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,17 @@
-# Build directories
-build/
-dist/
+# Dependency dirs
+/node_modules/
 
-### Node ###
+# Build and temp dirs
+/public/
+/build/
+/prod/
+/dist/
+/.tmp/
+/.cache/
+
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/logs/
+/*.log
 
-# Dependency directories
-node_modules/
-
-### VisualStudioCode ###
-.vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# IDE's local config
+/.vscode/
